# controllers/UserController.js
@@ -14,11 +14,12 @@ const UserController = {
 
       const hashedPassword = await bcrypt.hash(password, 10);
       const newUser = await User.create({ username, password: hashedPassword });
-      const token = jwt.sign({ id: newUser.id, username: newUser.username }, process.env.JWT_SECRET, { expiresIn: '1h' });
-
-      res.status(201).json({ token });
+      if(newUser) {
+        res.status(201).json({ error: 'Usuario registrado' });
+      }
+      res.status(500).json({ error: 'Error al registrar usuario' });
+      
     } catch (error) {
-      console.error('Error al registrar usuario:', error);
       res.status(500).json({ error: 'Error al registrar usuario' });
     }
   },
@@ -37,35 +38,32 @@ const UserController = {
         return res.status(401).json({ error: 'Credenciales incorrectas' });
       }
 
-      const token = jwt.sign({ id: user.id, username: user.username }, process.env.JWT_SECRET, { expiresIn: '1h' });
-
+      const token = jwt.sign({ id: user.id, username: user.username }, process.env.JWT_SECRET, { expiresIn: '12h' });
       res.json({ token });
     } catch (error) {
-      console.error('Error al iniciar sesión:', error);
       res.status(500).json({ error: 'Error al iniciar sesión' });
     }
   },
 
   async forgotPassword (req, res) {
     try {
-      const { email } = req.body;
+      const { username } = req.body;
 
-      const user = await User.findOne({ where: { email } });
+      const user = await User.findOne({ where: { username } });
       if (!user) {
         return res.status(404).json({ message: 'Usuario no encontrado' });
       }
 
-      const token = jwt.sign({ id: user.id }, process.env.JWT_SECRET, { expiresIn: '1h' });
-
+      const token = jwt.sign({ id: user.id }, process.env.JWT_SECRET, { expiresIn: '5m' });
       res.status(200).json({ token });
     } catch (error) {
-      console.error(error);
       res.status(500).json({ message: 'Error al procesar la solicitud' });
     }
   },
+
   resetPassword: async (req, res) => {
     try {
-      const { token, newPassword } = req.body;
+      const { token, password } = req.body;
 
       const decoded = jwt.verify(token, process.env.JWT_SECRET);
 
@@ -74,16 +72,15 @@ const UserController = {
         return res.status(404).json({ message: 'Usuario no encontrado' });
       }
 
-      const hashedPassword = await bcrypt.hash(newPassword, 10);
+      const hashedPassword = await bcrypt.hash(password, 10);
       user.password = hashedPassword;
       await user.save();
-
+      jwt.sign
       res.status(200).json({ message: 'Contraseña restablecida con éxito' });
     } catch (error) {
-      console.error(error);
       res.status(500).json({ message: 'Error al procesar la solicitud' });
     }
-  }
+  },
 };
 
 module.exports = UserController;
