# swagger.yaml
@@ -62,7 +62,7 @@ paths:
             schema:
               type: object
               properties:
-                email:
+                username:
                   type: string
       responses:
         '200':
@@ -101,6 +101,19 @@ paths:
         - Products
       security:
         - BearerAuth: []
+      parameters:
+        - in: query
+          name: page
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - in: query
+          name: pageSize
+          required: false
+          schema:
+            type: integer
+            default: 20
       responses:
         '200':
           description: Lista de productos obtenida exitosamente
